# project-athena

./: .gitignore  README.md  athena.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: quality.yml
config/: regions.json
src/: cli.py
src/anomaly/: __init__.py  models.py  scoring.py
src/baseline/: __init__.py  analysis.py  models.py
src/catalog/: __init__.py  export.py  models.py  normalization.py  pipeline.py  usgs.py
src/ingestion/: provider.py  usgs_client.py
src/metrics/: __init__.py  activity.py  depth.py  energy.py  magnitude.py
src/observatory/: __init__.py  builder.py  intelligence.py  models.py  report.py  status.py  thresholds.py
src/pipelines/: activity_report.py  build_catalog.py  download_catalog.py
src/spatial/: __init__.py  centroid.py  clusters.py  distance.py
src/swarm/: __init__.py  analysis.py  models.py
src/timeseries/: __init__.py  builder.py  models.py
src/trends/: __init__.py  analysis.py  models.py
tests/: test_activity.py  test_anomaly_scoring.py  test_baseline_analysis.py  test_catalog.py  test_cli.py  test_depth.py  test_energy.py  test_magnitude.py  test_observatory_builder.py  test_observatory_intelligence_report.py  test_observatory_models.py  test_observatory_status.py  test_spatial_centroid.py  test_spatial_clusters.py  test_spatial_distance.py  test_swarm_analysis.py  test_timeseries_builder.py  test_trend_analysis.py
tests/fixtures/: usgs_catalog.json
